WIP: NormalizedNode is not a generic
Rework the NormalizedNode model do split identifier and value,
using overrides rather than generics. This cuts down complexity
quite a bit and makes the interface much more friendly.

// FIXME: add default appendToString() methods

JIRA: YANGTOOLS-1074
Change-Id: I49c58850f565182826f5a8e1fc5b58cffb4a7d47
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>